--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,44 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
-    tools:context=".activity.LoginActivity"
     android:padding="@dimen/margin_16"
-    android:gravity="center">
+    tools:context=".activity.LoginActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_margin="@dimen/margin_32"
         android:text="@string/dehaat"
         android:textSize="@dimen/largeText"
-        android:textStyle="bold"
-        android:layout_margin="@dimen/margin_32"/>
+        android:textStyle="bold" />
 
     <EditText
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/email"
-        android:background="@drawable/rectangle"
-        android:padding="@dimen/margin_8"
         android:layout_marginBottom="@dimen/margin_16"
-        android:inputType="textEmailAddress"/>
+        android:background="@drawable/rectangle"
+        android:hint="@string/email"
+        android:inputType="textEmailAddress"
+        android:padding="@dimen/margin_8" />
 
     <EditText
+        android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/password"
         android:background="@drawable/rectangle"
-        android:padding="@dimen/margin_8"
-        android:inputType="textPassword"/>
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:padding="@dimen/margin_8" />
 
     <Button
+        android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login"
-        android:layout_margin="@dimen/margin_16"/>
+        android:layout_margin="@dimen/margin_16"
+        android:text="@string/login" />
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 
 </LinearLayout>
